--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WebViewAdapter</string>
+    <string name="tab_1">RecyclerViewPresenter</string>
+    <string name="tab_2">Heart-Rate-Ometer</string>
+    <string name="tab_3">Android-PGP</string>
+    <string name="tab_4">StreamingAndroidLogger</string>
+    <string name="tab_5">KalmanRx</string>
 </resources>
